syntax = "proto3";
package server;

service ContainerService {
  rpc get_status(GetStatusRequest) returns (GetStatusResponse);
  rpc kill_server(KillServerRequest) returns (KillServerResponse);
  rpc make_healthcheck_pass(MakeHealthcheckPassRequest) returns (MakeHealthcheckPassResponse);
  rpc make_healthcheck_fail(MakeHealthcheckFailRequest) returns (MakeHealthcheckFailResponse);
}

message KillServerRequest {}
message KillServerResponse {}
message MakeHealthcheckPassRequest {}
message MakeHealthcheckPassResponse {}
message MakeHealthcheckFailRequest {}
message MakeHealthcheckFailResponse {}

message GetStatusRequest {}

message GetStatusResponse {
  string id = 1;
  string name = 2;
  uint64 status = 3;
}